package com.baah;

public class Main {

    public static void main(String[] args) {
        MainGame mainFrame = new MainGame();
    }
}
